--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,3 +21,26 @@ jobs:
 
       - name: Run tests
         run: npm run check 
+
+  Deploy:
+      needs: Testing
+      runs-on: ubuntu-latest 
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: Set up Node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: '22'
+
+        - name: Install dependencies
+          run: npm install 
+        
+        - name: Install PM2
+          run: npm install pm2 -g  
+        
+        - name: Deploy to Server
+          run: |
+            pm2 delete "Server" || true
+            pm2 start "npm start" --name="Server"
