CI/CD Pipeline test 5

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,7 +24,8 @@ jobs:
 
   Deploy:
       needs: Testing
-      runs-on: ubuntu-latest 
+      runs-on: self-hosted
+
       steps:
         - name: Checkout code
           uses: actions/checkout@v3
