--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,4 +44,4 @@ jobs:
         - name: Deploy to Server
           run: |
             pm2 delete "Server" || true
-            pm2 start "npm run start" --name="Server" 
+            pm2 start "npm start" --name="Server" 
